Tweaks to README

--- a/puppet/README
+++ b/puppet/README
@@ -2,12 +2,12 @@
 https://docs.puppet.com/puppet/latest/install_osx.html#download-the-os-x-puppet-agent-package
 
 # Configure puppet to look for manifests in the proper place
-$ cd fetchdb/fetchdb/packaging/etc_fetch/demo/puppet
+$ cd puppet
 $ puppet config print | grep environmentpath
-environmentpath = /Users/tim/.puppetlabs/etc/code/environments
+environmentpath = $HOME/.puppetlabs/etc/code/environments
 $ puppet config set environmentpath ./environments
 $ puppet config print | grep environmentpath
-environmentpath = /Users/tim/gocode/src/github.com/styrainc/fetchdb/packaging/etc_fetch/demo/puppet/environments
+environmentpath = $ROOT/puppet/environments
 
 # Compile manifest for node foo.
 #  It doesn't matter what node-name you give--the default is to use the 'production' environment.
